--- a/hw/quartus/hardware-acceleration.qsf
+++ b/hw/quartus/hardware-acceleration.qsf
@@ -1159,4 +1159,5 @@ set_global_assignment -name VHDL_FILE ../hdl/Swap.vhd
 set_global_assignment -name VHDL_FILE ../hdl/Counter.vhd
 set_global_assignment -name VHDL_FILE ../hdl/DE1_SoC_top_level.vhd
 set_global_assignment -name QSYS_FILE soc_system.qsys
+set_global_assignment -name VHDL_FILE ../hdl/SwapAccelerator.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
